# rustbox

./: .gitignore  Cargo.toml  README.md  applets.json  build.rs
.github/workflows/: ci.yml
docs/: APPLETS.md  QEMU.md  RASPBERRY4.md  SECURITY.md  TESTING.md  VI.md
fuzz/: Cargo.toml  applets-fuzz.json
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: dnscached.rs  gzip.rs  rash_arith.rs  rash_parse.rs  rash_run.rs  sshd.rs  tar.rs  thttpd.rs  udhcpc.rs  wget.rs
initrd/template/etc/: crontab  dnscached.conf  group  hostname  inittab  inittab.shell  logrotate.conf  mdev.conf  passwd  sshd.conf  telnetd.conf  thttpd.conf
initrd/template/sbin/: fake-ntp-reply  run-smoke-test  setup-ping-range  smoke-test  soak-loop
kernel/: config.pi4  config.qemu
pi4/template/boot/: cmdline.txt  config.txt
pi4/template/etc/: inittab
scripts/: applet-sizes.json  build-kernel.sh  build-pi-kernel.sh  build-pi.sh  ci-local.sh  fetch-pi-firmware.sh  fuzz-campaign.sh  fuzz-coverage.sh  fuzz-env.sh  fuzz-regression.sh  fuzz-watchdog.sh  gen-sshd-passwd.sh  kernel-source.sh  measure-applet-sizes.py  mk-fuzz-corpus.sh  mk-pi-image.sh  mk-pi-rootfs.sh  mkinitrd.sh  patch-applet-sizes-doc.py  pi-musl-env.sh  qemu-common.sh  qemu-shell.sh  qemu-smoke.sh  qemu-soak.sh  qemu-test.sh  refresh-pi-image-rootfs.sh  setup-kernel-tools.sh
src/: lib.rs  main.rs  passwd_auth.rs  passwd_lookup.rs  sys.rs
src/applets/: basename.rs  cat.rs  chmod.rs  chown.rs  cp.rs  cron.rs  cut.rs  date.rs  dd.rs  dig.rs  dirname.rs  dmesg.rs  dnscached.rs  echo.rs  env.rs  false_.rs  find.rs  free.rs  grep.rs  gzip.rs  halt.rs  head.rs  hostname.rs  ifconfig.rs  init.rs  kill.rs  killall.rs  ln.rs  logger.rs  logrotate.rs  ls.rs  mdev.rs  mkdir.rs  mknod.rs  mod.rs  mount.rs  mv.rs  nc.rs  ntpclient.rs  passwd.rs  (+38 more)
src/applets/sh/: arith.rs  builtin.rs  exec.rs  expand.rs  lineedit.rs  mod.rs  parse.rs  trap.rs
src/applets/vi/: editor.rs  keys.rs  mod.rs  tty.rs
src/compress/: gzip.rs
src/mdev/: mod.rs
src/net/: dhcp.rs  dns_cache.rs  dns_query.rs  dnscached.rs  doh.rs  http.rs  http_client.rs  iface.rs  ipv4.rs  mod.rs  netcat.rs  ntp.rs  ping.rs  route.rs  sshd.rs  syslog.rs  telnetd.rs  tls.rs
tests/: appliance.rs  archive.rs  basic.rs  cron.rs  dispatcher.rs  dmesg.rs  echo.rs  files.rs  halt_reboot.rs  init.rs  mdev.rs  mount.rs  net.rs  passwd.rs  paths.rs  perms.rs  pipeline.rs  pivot_root.rs  proc.rs  search.rs  sh.rs  su.rs  switch_root.rs  sysadmin.rs  telnetd.rs  text.rs  thttpd.rs  umount.rs  vi.rs  wget.rs
tests/support/: mod.rs
tests/vi_fixtures/change_cc/: keys.txt
tests/vi_fixtures/change_cw/: expected.txt  keys.txt
tests/vi_fixtures/delete_2x/: keys.txt
tests/vi_fixtures/delete_3dd/: keys.txt
tests/vi_fixtures/ex_w/: keys.txt
(+59 files in other folders)
