[package]
name = "rustbox"
version = "0.2.0"
edition = "2021"
description = "A BusyBox-style multi-call binary in Rust"
license = "BlueOak-1.0.0"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "rustbox"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.102"
bcrypt = { version = "0.16", optional = true }
libc = "0.2"
rustix = { version = "1.1.4", features = ["fs", "process", "time", "stdio", "std", "thread", "runtime", "mount", "system", "pipe", "termios"] }
rand = { version = "0.10", optional = true }
russh = { version = "0.61", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring", "logging"] }
simple-dns = { version = "0.9", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
webpki-roots = { version = "1.0", optional = true }

[features]
default = ["applet-dig", "applet-dnscached", "applet-passwd", "wget-tls"]
tls = ["dep:rustls", "dep:webpki-roots"]
applet-dig = ["dep:simple-dns"]
applet-dnscached = ["tls", "dep:simple-dns"]
applet-passwd = ["dep:bcrypt"]
applet-sshd = ["dep:russh", "dep:tokio", "dep:rand", "dep:bcrypt"]
wget-tls = ["tls"]
fuzzing = []

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
