[package]
name = "rustbox-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rustbox = { path = "..", features = ["fuzzing", "applet-sshd"] }

[[bin]]
name = "rash_parse"
path = "fuzz_targets/rash_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rash_arith"
path = "fuzz_targets/rash_arith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rash_run"
path = "fuzz_targets/rash_run.rs"
test = false
doc = false
bench = false

[[bin]]
name = "udhcpc"
path = "fuzz_targets/udhcpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "thttpd"
path = "fuzz_targets/thttpd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wget"
path = "fuzz_targets/wget.rs"
test = false
doc = false
bench = false


[[bin]]
name = "dnscached"
path = "fuzz_targets/dnscached.rs"
test = false
doc = false
bench = false


[[bin]]
name = "sshd"
path = "fuzz_targets/sshd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gzip"
path = "fuzz_targets/gzip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tar"
path = "fuzz_targets/tar.rs"
test = false
doc = false
bench = false
